** KPILOT CHANGELOG **
======================

2004-12-06  Adriaan de Groot
* Imported memofile from vanRijn.

2004-11-30  Adriaan de Groot
* Having a second child .. puts a dent in development time.
* Make the daemon's next-sync match the one in KPilot, added tooltips
  and whatsthis. Make the daemon tell KPilot what the next sync is,
  so that changes from the tray menu are visible. This removes some strings.

2004-11-29  Adriaan de Groot
* Waiting for second child .. puts a dent in development time too.
* Ported KPilot to pilot-link 0.12 (unreleased) which adds support
  for newer devices and saves memory in the process.
* Data-loss on restore bug fixed by Will Stephenson.

2004-11-23  Adriaan de Groot
* Squashed several silly bugs in wizard and startup code.

2004-11-17  Adriaan de Groot
* Hiatus in KPilot due to working upstream on pilot-link.
* Patches from Olivier, merci.

2004-10-11  Adriaan de Groot
* Made an actual CVS tag for KPilot, kpilot_4_4_6. Uploaded new 4.4.6
  tarballs. Updated the site. Posted more developer's notes.
* Added initial encoding-selection boxes to the doc conduit, to indicate
  that the input text files are not UTF-8 but something else.
* Started revamping PilotLocalDatabase so we can get rid of the must-
  sync-to-delete-new-(memo|address|whatever) in the internal viewers.
* All the bugs in the database really need a "can you check this again"?
  added. Till Adam has been messing with recent code and is reporting
  new crashes and bugs.


2004-10-07  Adriaan de Groot
* Started adding encoding support to PalmDOC conduit dialogs. Not
  sure how to proceed there.
* Closed some more bugs, generally confused about some of the bugs
  remaining in the database -- I need cooperation from the folks
  reporting the bugs.
* Went on a str*cpy() hunt to avoid bad copies; converted most to
  strlcpy(). Not the ones in the docconduit, though, since there,
  the strncpy()s go to a data structure that doesn't necessarily