@@ -21,7 +21,7 @@
 ** the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
 ** MA 02111-1307, USA.
 */
- 
+
 /*
 ** Bug reports and questions can be sent to kde-pim@kde.org
 */
@@ -89,7 +89,7 @@ int docMatchBookmark::findMatches(QString doctext, bmkList &fBookmarks) {
 			if (found>=from && found<=to) {
 				fBookmarks.append(new docBookmark(pattern, pos));
 				++nr;
-				
+
 			}
 			++pos;
 		}
@@ -99,7 +99,9 @@ int docMatchBookmark::findMatches(QString doctext, bmkList &fBookmarks) {
 
 
 
-int docRegExpBookmark::findMatches(QString doctext, bmkList &fBookmarks) {
+int docRegExpBookmark::findMatches(QString doctext, bmkList &fBookmarks)
+{
+	FUNCTIONSETUP;
 //	bmkList res;
 	QRegExp rx(pattern);
 	int pos = 0, nr=0, found=0;
@@ -184,7 +186,7 @@ void DOCConverter::setPDB(PilotDatabase * dbi) {
 	if (dbi) docdb = dbi;
 }
 
- 
+
 
 QString DOCConverter::readText() {
 	FUNCTIONSETUP;
@@ -220,14 +222,14 @@ int DOCConverter::findBmkEndtags(QString &text, bmkList&fBmks) {
 		// every other character than a > is assumed to belong to the text, so there are no more bookmarks.
 		if (pos < 0 || text[pos] != '>') {
 			DEBUGCONDUIT<<"Current character \'"<<text[pos].latin1()<<"\' at position "<<pos<<" is not and ending >. Finish searching for bookmarks."<<endl;
-		
+
 			pos=-1;
 			break;
 		} else {
 			int endpos = pos;
 			doSearch=true;
 			DEBUGCONDUIT<<"Found the ending >, now looking for the opening <"<<endl;
-			
+
 			// Search for the opening <. There must not be a newline in the bookmark text.
 			while (doSearch && pos > 0) {
 //				DEBUGCONDUIT<<"pos="<<pos<<", char="<<text[pos].latin1()<<endl;
@@ -252,7 +254,7 @@ int DOCConverter::findBmkEndtags(QString &text, bmkList&fBmks) {
 	}
 	return nr;
 }
-		
+
 int DOCConverter::findBmkInline(QString &text, bmkList &fBmks) {
 	FUNCTIONSETUP;
 //	bmkList res;
@@ -275,7 +277,7 @@ int DOCConverter::findBmkInline(QString &text, bmkList &fBmks) {
 int DOCConverter::findBmkFile(QString &, bmkList &fBmks) {
 	FUNCTIONSETUP;
 	int nr=0;
-	
+
 	QString bmkfilename = txtfilename;
 	if (bmkfilename.endsWith(CSL1(".txt"))){
 		bmkfilename.remove(bmkfilename.length()-4, 4);
@@ -291,7 +293,7 @@ int DOCConverter::findBmkFile(QString &, bmkList &fBmks) {
 			return 0;
 		}
 	}
-	
+
 	DEBUGCONDUIT<<"Bookmark file: "<<bmkfilename<<endl;
 
 	QTextStream bmkstream(&bmkfile);
@@ -375,12 +377,12 @@ int DOCConverter::findBmkFile(QString &, bmkList &fBmks) {
 
 bool DOCConverter::convertTXTtoPDB() {
 	FUNCTIONSETUP;
-	
+
 	if (!docdb) {
 		emit logError(i18n("Unable to open Database for writing"));
 		return false;
 	}
-	
+
 	QString text = readText();
 
 	if (fBmkTypes & eBmkEndtags) {
@@ -432,12 +434,12 @@ bool DOCConverter::convertTXTtoPDB() {
 		DEBUGCONDUIT<<bmk->bmkName.left(20)<<" at position "<<bmk->position<<endl;
 	}
 #endif
-	
+
 	if (!docdb->isDBOpen()) {
 		emit logError(i18n("Unable to open palm doc database %1").arg(docdb->dbPathName()) );
 		return false;
 	}
-	
+
 	// Clean the whole database, otherwise the records would be just appended!
 	docdb->deleteRecord(0, true);
 
@@ -452,7 +454,7 @@ bool DOCConverter::convertTXTtoPDB() {
 	PilotRecord*rec=docHead.pack();
 	docdb->writeRecord(rec);
 	KPILOT_DELETE(rec);
-	
+
 	DEBUGCONDUIT << "Write header record: length="<<text.length()<<", compress="<<compress<<endl;
 
 	// First compress the text, then write out the bookmarks and - if existing - also the annotations
@@ -463,11 +465,11 @@ bool DOCConverter::convertTXTtoPDB() {
 	{
 		reclen=min(len-start, PilotDOCEntry::TEXT_SIZE);
 		DEBUGCONDUIT << "Record #"<<recnum<<", reclen="<<reclen<<", compress="<<compress<<endl;
-		
+
 		PilotDOCEntry recText;
 //		recText.setText(text.mid(start, reclen), reclen);
 		recText.setText(text.mid(start, reclen));
-//		if (compress) 
+//		if (compress)
 		recText.setCompress(compress);
 		PilotRecord*textRec=recText.pack();
 		docdb->writeRecord(textRec);
@@ -475,7 +477,7 @@ bool DOCConverter::convertTXTtoPDB() {
 		start+=reclen;
 		KPILOT_DELETE(textRec);
 	}
-	
+
 	recnum=0;
 	// Finally, write out the bookmarks
 	for (bmk = pdbBookmarks.first(); bmk; bmk = pdbBookmarks.next())
@@ -483,7 +485,7 @@ bool DOCConverter::convertTXTtoPDB() {
 	{
 		++recnum;
 		DEBUGCONDUIT << "Bookmark #"<<recnum<<", Name="<<bmk->bmkName.left(20)<<", Position="<<bmk->position<<endl;
-		
+
 		PilotDOCBookmark bmkEntry;
 		bmkEntry.pos=bmk->position;
 		strncpy(&bmkEntry.bookmarkName[0], bmk->bmkName.latin1(), 16);
@@ -507,7 +509,7 @@ bool DOCConverter::convertPDBtoTXT()
 		emit logError(i18n("No filename set for the conversion"));
 		return false;
 	}
-	
+
 	if (!docdb) {
 		emit logError(i18n("Unable to open Database for reading"));
 		return false;
@@ -523,7 +525,7 @@ bool DOCConverter::convertPDBtoTXT()
 	}
 	PilotDOCHead header(headerRec);
 	KPILOT_DELETE(headerRec);
-	
+
 	DEBUGCONDUIT<<"Database "<<docdb->dbPathName()<<" has "<<header.numRecords<<" text records, "<<endl
 		<<" total number of records: "<<docdb->recordCount()<<endl
 		<<" position="<<header.position<<endl
