@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Service
-Comment=Adds text files to your Pilot, suitable for DOC readers.
+Comment=Adds text files to your handheld, suitable for DOC readers.
 Comment[bg]=Добавяне на текстови файлове към Palm Pilot
 Comment[bs]=Dodaje tekstualne datoteke prikladne za DOC čitače vašem Pilotu.
 Comment[ca]=Afegeix fitxers de text al vostre Pilot, apropiat per a lectors de DOC.
