@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Type=Service
 Name=Memo File
-Comment=This conduit syncs your palm pilot's memos with a local directory.
+Comment=This conduit syncs your handheld memos with a local directory.
 Implemented=file
 ServiceTypes=KPilotConduit
 X-KDE-Library=conduit_memofile
