@@ -16,7 +16,7 @@ Name[ta]=நோட்பேட்
 Name[tg]=Эзоҳот
 Name[xx]=xxNotePadxx
 Name[zh_CN]=记事本
-Comment=This conduit backs up NotePad drawings to a local folder
+Comment=This conduit backs up NotePad drawings to a local folder.
 Comment[bg]=Създаване на архивни копия на изображенията създадени с NotePad в локална директория
 Comment[da]=Denne kanal sikkerhedskopierer NotePad's tegninger til en lokal mappe
 Comment[de]=Diese Abgleicher sichert NotePad-Zeichnungen in einen lokalen Ordner
