@@ -1,40 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Service
-Comment[bg]=Синхронизация на календара на мобилно устройство с организатора в КДЕ
-Comment[bs]=Ovaj conduit sinhronizuje Datebook aplikaciju na ručnom računaru sa KOrganizerom.
-Comment[ca]=Aquest conducte sincronitza la llibreta de dates des de la vostra agenda electrònica a KOrganizer.
-Comment[cs]=Toto propojení synchronizuje vašeho Pilota s kalendářem KOrganizéru
-Comment[cy]=Mae'r cwndid yma yn cydamseru'r Llyfr Dyddiadau o'ch llawiadur i KTrefnydd.
-Comment[da]=Denne conduit synkroniserer datobogen fra din håndholdte til KOrganizer.
-Comment[de]=Abgleich der Terminkalender von Taschencomputer und KOrganizer
-Comment[el]=Αυτός ο σύνδεσμος συγχρονίζει το βιβλίο ημερομηνιών από τον υπολογιστή παλάμης σας στο KOrganizer.
-Comment[es]=Este conducto sincroniza la Agenda de su agenda electrónica en KOrganizer.
-Comment[et]=See kanal sünkroniseerib pihuarvuti ja KOrganizeri kalendri.
-Comment[fi]=Tämä yhdyskäytävä synkronoi mobiililaitteesi päiväkirjan KOrganizeriin.
-Comment[fr]=Ce canal synchronise l'agenda de votre Palm sur KOrganizer.
-Comment[hi]=यह कन्ड्यूइट आपके हैंण्डहेल्ड से तारीख़-पुस्तिका को के-आर्गेनाइज़र में सिंक करता है
-Comment[hu]=Ezzel a csatolóval a Pilot határidőnaplója és a KOrganizer naptára között lehet szinkronizálást végezni
-Comment[is]=Þessi rás samstillir dagbók lófatölvunnar þinnar eftir KSkipulagi.
-Comment[it]=Questo condotto sincronizza Datebook dal tuo palmare a KOrganizer.
-Comment[ja]=このコンジットはハンドヘルドのデータブックと KOrganizer を同期させます。
-Comment[nb]=Denne kanalen synkroniserer almanakken fra Piloten til KOrganizer.
-Comment[nl]=Dit conduit synchroniseert de agenda van uw handheld met KOrganizer.
-Comment[nn]=Denne koplinga synkroniserer dagboka frå den handheldte eininga di til KOrganizer.
-Comment[pl]=Ten łącznik synchronizuje kalendarz z Twojego palmtopa z KOrganizerem.
-Comment[pt]=Esta conduta sincroniza o calendário do seu dispositivo móvel com o KOrganizer.
-Comment[pt_BR]=Este conduíte sincroniza a agenda do seu handheld com o KOrganizer.
-Comment[ru]=Канал синхронизации баз данных Pilot и органайзера KDE.
-Comment[sk]=Táto spojka synchronizuje Datebook s KOrganizer.
-Comment[sl]=Ta veznik usklajuje knjigo zmenkov z vašega ročnega računalnika s KOrganizerjem.
-Comment[sr]=Овај провод синхронизује књигу датума из вашег ручног рачунара са KOrganizer-ом.
-Comment[sr@Latn]=Ovaj provod sinhronizuje knjigu datuma iz vašeg ručnog računara sa KOrganizer-om.
-Comment[sv]=Den här kanalen synkroniserar almanackan i handdatorn med Korganizer.
-Comment[ta]=இந்த காப்புக்குழாய் உங்கள் கையேட்டில் இருந்து தேதி புத்தகத்தை கேஅமைபாளருக்கு ஒத்திசைக்கிறது
-Comment[tg]=Канали синхронизатсияи бонки додашудаи Pilot ва органайзери KDE
-Comment[uk]=Цей акведук синхронізує список подій кишенькового пристрою з тижневиком KOrganizer.
-Comment[xx]=xxThis conduit syncs the Datebook from your handheld to KOrganizer.xx
-Comment[zh_CN]=此管道会将您手持设备中的日期表与 KOrganizer 同步。
 Name=Calendar (KOrganizer)
 Name[be]=Каляндар (K Арганізатар)
 Name[ca]=Calendari (KOrganizer)
@@ -61,7 +27,7 @@ Name[ta]=நாள்காட்டி(கேஅமைப்பாளர்)
 Name[tg]=Тақвимот (KOrganizer)
 Name[xx]=xxCalendar (KOrganizer)xx
 Name[zh_CN]=日历 (KOrganizer)
-Comment=This conduit synchronizes your Pilot with the KOrganizer datebook.
+Comment=This conduit synchronizes your handheld with the KOrganizer datebook.
 Comment[af]=Hierdie pad sinkroniseer jou Pilot met die Korganizer datumboek.
 Comment[ar]=هذا الأنبوب يزامن جهاز Pilot الخاص بك مع أجندة تقويم المنظم
 Comment[az]=Bu əlavə sizin Pilot-u KOrganizer kitabcığı ilə sinxronlaşdırır.
